welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: Invalid literal number
for (t <-1to7)
         ^Runner:3: error: Invalid literal number
  for (i <- 1to4)
            ^Runner:1: error: illegal start of simple expression
for (t <-1to7)
         ^Runner:28: error: ')' expected but '}' found.
	}
        ^