welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (t <-1to7)
{
  for (i <- 1to4)
  {
    avance()
    avance()
    avance()
    avance()
    gauche()
    avance()
    avance()
    droite()
    avance()
    avance()
    avance()
    avance()
    droite()
    avance()
    avance()
    gauche()
    avance()
    avance()
    avance()
  }
  gauche()
}